[gd_scene load_steps=21 format=2]

[ext_resource path="res://resources/sprites/desktop/Icon0.png" type="Texture" id=1]
[ext_resource path="res://resources/sprites/desktop/Desktop1.png" type="Texture" id=2]
[ext_resource path="res://scenes/ui/ui_elements/button/GameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/desktop/Desktop.gd" type="Script" id=4]
[ext_resource path="res://resources/sprites/desktop/Icon6.png" type="Texture" id=5]
[ext_resource path="res://resources/sprites/desktop/Icon1.png" type="Texture" id=6]
[ext_resource path="res://resources/sprites/desktop/Icon2.png" type="Texture" id=7]
[ext_resource path="res://resources/sprites/desktop/Icon5.png" type="Texture" id=8]
[ext_resource path="res://resources/sprites/desktop/Icon3.png" type="Texture" id=9]
[ext_resource path="res://scenes/game/decoy_windows/SmithCoinNewsWindow.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/game/code_knots/CodeKnox2.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/game/code_knots/CodeKnox3.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/game/code_knots/CodeKnoxEncrypt.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/game/decoy_windows/StaySmallWindow.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/game/decoy_windows/YMCCWindow.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/game/sliding_puzzle/SlidingPuzzleWindow.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/game/hacked_window/HackedWindow.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/game/code_knots/CodeKnox1.tscn" type="PackedScene" id=18]
[ext_resource path="res://resources/themes/taskbar_theme.tres" type="Theme" id=19]

[sub_resource type="Animation" id=1]
resource_name = "popup_windows"
tracks/0/type = "method"
tracks/0/path = NodePath("HBox/WindowArea/SmithCoinNewsWindow")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("HBox/WindowArea/StaySmallWindow")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("HBox/WindowArea/SlidingPuzzleWindow")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("HBox/WindowArea/CodeKnots2")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("HBox/WindowArea/CodeKnots1")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("HBox/WindowArea/CodeKnots3")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("HBox/WindowArea/YMCCWindow")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("HBox/WindowArea/CodeKnoxEnchrypt")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("HBox/WindowArea/HackedWindow")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hide"
}, {
"args": [  ],
"method": "show"
} ]
}

[node name="Desktop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowArea" type="Control" parent="HBox"]
margin_right = 1280.0
margin_bottom = 658.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SlidingPuzzleWindow" parent="HBox/WindowArea" instance=ExtResource( 16 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 406.887
margin_top = 249.979
margin_right = 810.887
margin_bottom = 653.979

[node name="SmithCoinNewsWindow" parent="HBox/WindowArea" instance=ExtResource( 10 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.286
margin_top = 363.815
margin_right = 585.286
margin_bottom = 660.815

[node name="CodeKnots2" parent="HBox/WindowArea" instance=ExtResource( 18 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 535.911
margin_top = 85.4077
margin_right = 930.915
margin_bottom = 350.408

[node name="CodeKnots1" parent="HBox/WindowArea" instance=ExtResource( 11 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 837.022
margin_top = 322.045
margin_right = 1277.02
margin_bottom = 642.045

[node name="CodeKnots3" parent="HBox/WindowArea" instance=ExtResource( 12 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 658.308
margin_top = 339.636
margin_right = 1098.31
margin_bottom = 659.636

[node name="YMCCWindow" parent="HBox/WindowArea" instance=ExtResource( 15 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 643.256
margin_top = 394.75
margin_right = 1274.26
margin_bottom = 658.75

[node name="StaySmallWindow" parent="HBox/WindowArea" instance=ExtResource( 14 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 774.887
margin_top = 2.0
margin_right = 1280.89
margin_bottom = 414.0

[node name="CodeKnoxEnchrypt" parent="HBox/WindowArea" instance=ExtResource( 13 )]
anchor_left = 0.0
anchor_top = 0.00170588
anchor_right = 0.0
anchor_bottom = 0.00170588
margin_left = 820.0
margin_top = 4.87753
margin_right = 1274.0
margin_bottom = 273.878

[node name="HackedWindow" parent="HBox/WindowArea" instance=ExtResource( 17 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 814.0
margin_bottom = 520.0

[node name="TaskBar" type="PanelContainer" parent="HBox"]
margin_top = 662.0
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="HBox/TaskBar"]
margin_right = 1280.0
margin_bottom = 58.0
custom_constants/margin_right = 8
custom_constants/margin_top = 4
custom_constants/margin_left = 8
custom_constants/margin_bottom = 4
__meta__ = {
"_editor_description_": ""
}

[node name="TaskHBox" type="HBoxContainer" parent="HBox/TaskBar/Margin"]
margin_left = 8.0
margin_top = 4.0
margin_right = 1272.0
margin_bottom = 54.0

[node name="DecoysHBox" type="HBoxContainer" parent="HBox/TaskBar/Margin/TaskHBox"]
margin_right = 320.0
margin_bottom = 50.0

[node name="OsButton" parent="HBox/TaskBar/Margin/TaskHBox/DecoysHBox" instance=ExtResource( 3 )]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
icon = ExtResource( 1 )
flat = true
expand_icon = true

[node name="ExplorerButton" parent="HBox/TaskBar/Margin/TaskHBox/DecoysHBox" instance=ExtResource( 3 )]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
disabled = true
icon = ExtResource( 7 )
expand_icon = true

[node name="BrowserButton" parent="HBox/TaskBar/Margin/TaskHBox/DecoysHBox" instance=ExtResource( 3 )]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
disabled = true
icon = ExtResource( 6 )
expand_icon = true

[node name="WriterButton" parent="HBox/TaskBar/Margin/TaskHBox/DecoysHBox" instance=ExtResource( 3 )]
margin_left = 162.0
margin_right = 212.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
disabled = true
icon = ExtResource( 9 )
expand_icon = true

[node name="SteamButton" parent="HBox/TaskBar/Margin/TaskHBox/DecoysHBox" instance=ExtResource( 3 )]
margin_left = 216.0
margin_right = 266.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
disabled = true
icon = ExtResource( 5 )
expand_icon = true

[node name="MinecraftButton" parent="HBox/TaskBar/Margin/TaskHBox/DecoysHBox" instance=ExtResource( 3 )]
margin_left = 270.0
margin_right = 320.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
disabled = true
icon = ExtResource( 8 )
expand_icon = true

[node name="CmdHBox" type="HBoxContainer" parent="HBox/TaskBar/Margin/TaskHBox"]
margin_left = 324.0
margin_right = 806.0
margin_bottom = 50.0

[node name="SmithCoinButton" parent="HBox/TaskBar/Margin/TaskHBox/CmdHBox" instance=ExtResource( 3 )]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
expand_icon = true

[node name="StaySmallButton" parent="HBox/TaskBar/Margin/TaskHBox/CmdHBox" instance=ExtResource( 3 )]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
expand_icon = true

[node name="SlidingPuzzleButton" parent="HBox/TaskBar/Margin/TaskHBox/CmdHBox" instance=ExtResource( 3 )]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
expand_icon = true

[node name="CodeKnox1Button" parent="HBox/TaskBar/Margin/TaskHBox/CmdHBox" instance=ExtResource( 3 )]
margin_left = 162.0
margin_right = 212.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
expand_icon = true

[node name="CodeKnox2Button" parent="HBox/TaskBar/Margin/TaskHBox/CmdHBox" instance=ExtResource( 3 )]
margin_left = 216.0
margin_right = 266.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
expand_icon = true

[node name="CodeKnox3Button" parent="HBox/TaskBar/Margin/TaskHBox/CmdHBox" instance=ExtResource( 3 )]
margin_left = 270.0
margin_right = 320.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
expand_icon = true

[node name="YMCCButton" parent="HBox/TaskBar/Margin/TaskHBox/CmdHBox" instance=ExtResource( 3 )]
margin_left = 324.0
margin_right = 374.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
expand_icon = true

[node name="CodeKnoxEnchryptButton" parent="HBox/TaskBar/Margin/TaskHBox/CmdHBox" instance=ExtResource( 3 )]
margin_left = 378.0
margin_right = 428.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
expand_icon = true

[node name="HackedWindowButton" parent="HBox/TaskBar/Margin/TaskHBox/CmdHBox" instance=ExtResource( 3 )]
margin_left = 432.0
margin_right = 482.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/popup_windows = SubResource( 1 )

[node name="BackToMenuDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
window_title = "Bitte bestätigen..."
dialog_text = "Back to Menu?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrayOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.631373 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="new_code_knox" from="HBox/WindowArea/CodeKnoxEnchrypt" to="HBox/WindowArea/HackedWindow" method="_on_CodeKnoxEnchrypt_new_code_knox"]
[connection signal="pressed" from="HBox/TaskBar/Margin/TaskHBox/DecoysHBox/OsButton" to="." method="_on_OsButton_pressed"]
[connection signal="pressed" from="HBox/TaskBar/Margin/TaskHBox/CmdHBox/SmithCoinButton" to="." method="_on_SmithCoinButton_pressed"]
[connection signal="pressed" from="HBox/TaskBar/Margin/TaskHBox/CmdHBox/StaySmallButton" to="." method="_on_StaySmallButton_pressed"]
[connection signal="pressed" from="HBox/TaskBar/Margin/TaskHBox/CmdHBox/SlidingPuzzleButton" to="." method="_on_SlidingPuzzleButton_pressed"]
[connection signal="pressed" from="HBox/TaskBar/Margin/TaskHBox/CmdHBox/CodeKnox1Button" to="." method="_on_CodeKnox1Button_pressed"]
[connection signal="pressed" from="HBox/TaskBar/Margin/TaskHBox/CmdHBox/CodeKnox2Button" to="." method="_on_CodeKnox2Button_pressed"]
[connection signal="pressed" from="HBox/TaskBar/Margin/TaskHBox/CmdHBox/CodeKnox3Button" to="." method="_on_CodeKnox3Button_pressed"]
[connection signal="pressed" from="HBox/TaskBar/Margin/TaskHBox/CmdHBox/YMCCButton" to="." method="_on_YMCCButton_pressed"]
[connection signal="pressed" from="HBox/TaskBar/Margin/TaskHBox/CmdHBox/CodeKnoxEnchryptButton" to="." method="_on_CodeKnoxEnchryptButton_pressed"]
[connection signal="pressed" from="HBox/TaskBar/Margin/TaskHBox/CmdHBox/HackedWindowButton" to="." method="_on_HackedWindowButton_pressed"]
[connection signal="confirmed" from="BackToMenuDialog" to="." method="_on_BackToMenuDialog_confirmed"]
[connection signal="popup_hide" from="BackToMenuDialog" to="." method="_on_BackToMenuDialog_popup_hide"]
